[gd_scene load_steps=8 format=3 uid="uid://binuf136kf46c"]

[ext_resource type="Script" uid="uid://c66rr3m7cnrw0" path="res://testing_button.gd" id="1_myinc"]
[ext_resource type="Texture2D" uid="uid://cf3acei12geoq" path="res://icon.svg" id="2_njov2"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_njov2"]
size = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_njov2"]
texture = ExtResource("2_njov2")
expand_margin_top = 25.0
expand_margin_bottom = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_njov2"]
bg_color = Color(0.9473402, 0.11708567, 0.17809248, 1)
expand_margin_top = 25.0
expand_margin_bottom = 25.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8tn2x"]
texture = ExtResource("2_njov2")
expand_margin_top = 25.0
expand_margin_bottom = 25.0
axis_stretch_horizontal = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2au82"]
bg_color = Color(3.5616756e-06, 0.63778394, 0.7072917, 1)

[node name="Test" type="Node2D"]
script = ExtResource("1_myinc")

[node name="Button" type="Button" parent="."]
offset_left = 356.0
offset_top = 123.0
offset_right = 760.0
offset_bottom = 276.0
text = "Button"

[node name="Node2D" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="Node2D"]
offset_right = 1127.0
offset_bottom = 387.0

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
position = Vector2(430, 173.00002)
scale = Vector2(2.8125002, 1.609375)
texture = ExtResource("2_njov2")

[node name="HSlider" type="HSlider" parent="."]
offset_left = 387.0
offset_top = 499.0
offset_right = 798.0
offset_bottom = 552.0
theme_override_icons/grabber = SubResource("PlaceholderTexture2D_njov2")
theme_override_styles/slider = SubResource("StyleBoxTexture_njov2")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_njov2")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_8tn2x")
value = 10.0

[node name="HSlider2" type="HSlider" parent="."]
offset_left = 384.0
offset_top = 583.0
offset_right = 950.0
offset_bottom = 622.0
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_2au82")
value = 10.0

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 828.0
offset_top = 424.0
offset_right = 1200.0
offset_bottom = 533.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_exited" from="HSlider" to="." method="_on_h_slider_mouse_exited"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
